# insurance-causal

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  run_benchmark_causal_forest.py  run_benchmark_databricks.py  run_tests_coverage.py  run_tests_new_v2.py
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md  benchmark_causal_forest.py  run_benchmark.py
examples/: binary_treatment.py  quickstart.py  rate_change_evaluation.py
notebooks/: 01_insurance_causal_demo.py  02_autodml_demo.py  03_elasticity_demo.py  04_causal_forest_hte_demo.py  05_rate_change_evaluator_demo.py  benchmark.py  benchmark_causal_forest.py  benchmark_fremtpl2.py  benchmark_small_sample_sweep.py  databricks_validation.py  quickstart.ipynb  rate_change_demo.py  run_causal_forest_tests.py  run_ci_tests.py  run_clustering_tests.py  run_tests.py  run_tests_databricks.py  run_tests_debug.py  run_tests_new_v2.py  test_adaptive_params.py  test_rate_change.py
src/insurance_causal/: __init__.py  _model.py  _utils.py  _validation.py  diagnostics.py  treatments.py
src/insurance_causal/autodml/: __init__.py  _crossfit.py  _inference.py  _nuisance.py  _types.py  dgp.py  dose_response.py  dual_selection.py  elasticity.py  policy_shift.py  report.py  riesz.py  selection.py
src/insurance_causal/causal_forest/: __init__.py  clustering.py  data.py  diagnostics.py  estimator.py  exposure.py  inference.py  targeting.py
src/insurance_causal/elasticity/: __init__.py  demand.py  diagnostics.py  fit.py  optimise.py  surface.py
src/insurance_causal/rate_change/: __init__.py  _data.py  _diagnostics.py  _did.py  _evaluator.py  _its.py  _plots.py  _result.py  _shocks.py
tests/: test_diagnostics.py  test_diagnostics_extended.py  test_model_unit.py  test_p0_regressions.py  test_p1_regressions.py  test_treatments.py  test_treatments_extended.py  test_utils.py  test_utils_extended.py  test_validation.py
tests/autodml/: test_adaptive_regularisation.py  test_autodml_elasticity.py  test_crossfit.py  test_dgp.py  test_dose_response.py  test_dual_selection.py  test_imports.py  test_inference.py  test_nuisance.py  test_policy_shift.py  test_report.py  test_riesz.py  test_selection.py  test_types.py  test_validate_inputs.py
tests/causal_forest/: conftest.py  test_clustering.py  test_data.py  test_diagnostics.py  test_estimator.py  test_estimator_helpers.py  test_exposure.py  test_inference.py  test_inference_helpers.py  test_targeting.py  test_targeting_helpers.py
tests/elasticity/: conftest.py  test_demand.py  test_demand_helpers.py  test_diagnostics.py  test_fit.py  test_fit_helpers.py  test_optimise.py  test_surface.py  test_surface_helpers.py
tests/rate_change/: test_data.py  test_diagnostics.py  test_did.py  test_evaluator.py  test_evaluator_unit.py  test_its.py  test_period_encoding.py  test_rate_change_plots.py  test_result.py  test_shocks.py
