[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-causal"
version = "0.3.1"
description = "Causal inference for insurance pricing: DML, AutoDML via Riesz Representers, and causal price elasticity."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance", "causal-inference", "double-machine-learning", "dml",
    "pricing", "actuarial", "treatment-effect", "econometrics",
    "catboost", "polars", "riesz-representer", "price-elasticity",
    "dose-response", "renewal-pricing", "GIPP", "PS21/5",
    "UK",
    "personal lines",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=12.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "doubleml>=0.7",
    "catboost>=1.2",
    "joblib>=1.3",
]

[project.optional-dependencies]
elasticity = [
    "econml>=0.15",
]
plots = [
    "matplotlib>=3.7",
]
reports = [
    "jinja2>=3.1",
    "matplotlib>=3.7",
]
all = [
    "econml>=0.15",
    "matplotlib>=3.7",
    "jinja2>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "econml>=0.15",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "pdoc>=14.0.0",
]

[project.urls]
Repository = "https://github.com/burning-cost/insurance-causal"
Issues = "https://github.com/burning-cost/insurance-causal/issues"
Homepage = "https://github.com/burning-cost/insurance-causal"
Documentation = "https://burning-cost.github.io/insurance-causal"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_causal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "econml>=0.15",
    "catboost>=1.2",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "pdoc>=14.0.0",
]
