[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-causal"
version = "0.6.2"
description = "Causal inference for insurance pricing: DML, AutoDML via Riesz Representers, causal price elasticity, heterogeneous treatment effects, and post-hoc rate change evaluation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance", "causal-inference", "double-machine-learning", "dml",
    "pricing", "actuarial", "treatment-effect", "econometrics",
    "catboost", "polars", "riesz-representer", "price-elasticity",
    "dose-response", "renewal-pricing", "GIPP", "PS21/5",
    "UK",
    "personal lines",
    "heterogeneous-treatment-effects", "hte", "causal-forest",
    "blp", "gates", "clan", "rate", "autoc",
    "difference-in-differences", "did", "interrupted-time-series", "its",
    "rate-change", "consumer-duty",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=14.0",
    # doubleml>=0.10 requires scikit-learn>=1.6.0 (updated Jan 2026)
    "scikit-learn>=1.6",
    "scipy>=1.12",
    "doubleml>=0.10.0",
    "catboost>=1.2",
    "joblib>=1.3",
    "statsmodels>=0.14.5",
]

[project.optional-dependencies]
elasticity = [
    "econml>=0.15",
]
causal_forest = [
    "econml>=0.15",
]
plots = [
    "matplotlib>=3.7",
]
reports = [
    "jinja2>=3.1",
    "matplotlib>=3.7",
]
rate_change = [
    "statsmodels>=0.14.5",
    "matplotlib>=3.7",
]
all = [
    "econml>=0.15",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "statsmodels>=0.14.5",
]
dev = [
    "pytest>=9.0",
    "pytest-cov",
    "catboost>=1.2",
    "econml>=0.15",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "pdoc>=14.0.0",
    "statsmodels>=0.14.5",
]

[project.urls]
Homepage = "https://burning-cost.github.io/"
Repository = "https://github.com/burning-cost/insurance-causal"
Changelog = "https://github.com/burning-cost/insurance-causal/releases"
Documentation = "https://burning-cost.github.io/insurance-causal"
"Bug Tracker" = "https://github.com/burning-cost/insurance-causal/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_causal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
