[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-causal"
version = "0.6.3"
description = "Causal inference for insurance pricing: double machine learning, price elasticity, heterogeneous treatment effects, and post-hoc rate change evaluation for UK personal lines."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "causal inference",
    "causal-inference",
    "double machine learning",
    "double-machine-learning",
    "dml",
    "pricing",
    "actuarial",
    "UK",
    "personal lines",
    "treatment effect",
    "heterogeneous treatment effects",
    "hte",
    "causal forest",
    "econometrics",
    "price elasticity",
    "dose response",
    "renewal pricing",
    "rate change",
    "riesz representer",
    "GIPP",
    "PS21/5",
    "consumer duty",
    "difference in differences",
    "interrupted time series",
    "uplift modelling",
    "catboost",
    "polars",
    "blp",
    "gates",
    "autoc",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=14.0",
    # doubleml>=0.10 requires scikit-learn>=1.6.0 (updated Jan 2026)
    "scikit-learn>=1.6",
    "scipy>=1.12",
    "doubleml>=0.10.0",
    "catboost>=1.2",
    "joblib>=1.3",
    "statsmodels>=0.14.5",
]

[project.optional-dependencies]
elasticity = [
    "econml>=0.15",
]
causal_forest = [
    "econml>=0.15",
]
plots = [
    "matplotlib>=3.7",
]
reports = [
    "jinja2>=3.1",
    "matplotlib>=3.7",
]
rate_change = [
    "statsmodels>=0.14.5",
    "matplotlib>=3.7",
]
all = [
    "econml>=0.15",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "statsmodels>=0.14.5",
]
dev = [
    "pytest>=9.0",
    "pytest-cov",
    "catboost>=1.2",
    "econml>=0.15",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "pdoc>=14.0.0",
    "statsmodels>=0.14.5",
]

[project.urls]
Homepage = "https://burning-cost.github.io/libraries/insurance-causal/"
Documentation = "https://burning-cost.github.io/libraries/insurance-causal/"
Repository = "https://github.com/burning-cost/insurance-causal"
"Bug Tracker" = "https://github.com/burning-cost/insurance-causal/issues"
Changelog = "https://github.com/burning-cost/insurance-causal/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_causal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
